community/objects/Rate__c.object
<CustomObject>
    <fields>
        <fullName>Orientation_Over_8_Bill_Rate_Actual__c</fullName>
        <label>Orientation - Over 8 Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Over_8_Bill_Rate__c</fullName>
        <label>Orientation - Over 8 Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Over_8_Pay_Rate_Actual__c</fullName>
        <label>Orientation - Over 8 Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Over_8_Pay_Rate__c</fullName>
        <label>Orientation - Over 8 Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Regular_Bill_Rate_ADJ__c</fullName>
        <label>Orientation - Regular Bill Rate - (ADJ)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Regular_Bill_Rate_Actual__c</fullName>
        <label>Orientation - Regular Bill Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Regular_Bill_Rate__c</fullName>
        <label>Orientation - Regular Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Regular_Pay_Rate_Actual__c</fullName>
        <label>Orientation - Regular Pay Rate Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orientation_Regular_Pay_Rate__c</fullName>
        <label>Orientation - Regular Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Background__c</fullName>
        <label>Primary Background</label>
        <picklist>
            <controllingField>Function__c</controllingField>
            <picklistValues>
                <fullName>Agricultural Equipment Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD Drafter - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD Support Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chassis Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Equipment Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controls Systems Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drafter/Detailer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Support Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraulics Systems Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Equipment Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPD Support Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piping Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Systems Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powertrain Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pressure Vessel Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Support Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Support Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Designer - DES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recruiter_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recruiter Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Bonus__c</fullName>
        <label>Referral Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Car__c</fullName>
        <label>Rental Car</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVS_Holiday_Pay__c</fullName>
        <label>SVS Holiday Pay</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Background__c</fullName>
        <label>Secondary Background</label>
        <picklist>
            <controllingField>Function__c</controllingField>
            <picklistValues>
                <fullName>Agricultural Equipment Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD Drafter - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD Support Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chassis Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Equipment Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controls Systems Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drafter/Detailer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engine Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Support Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydraulics Systems Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Equipment Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPD Support Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piping Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Systems Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powertrain Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pressure Vessel Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Support Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Support Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Designer - DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Designer - DES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spread__c</fullName>
        <formula>IF( (Weekly_Scheduled_Contracted_Hours__c * (Base_Wage_Regular_Bill_Rate_ADJ__c - Total_Burden__c) &gt;= 0 ),

(Weekly_Scheduled_Contracted_Hours__c * (Base_Wage_Regular_Bill_Rate_ADJ__c - Total_Burden__c))

,

NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spread</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Burden__c</fullName>
        <formula>IF( AND( Contract_Length_Wks__c &lt;&gt; 0 , Weekly_Scheduled_Contracted_Hours__c &lt;&gt; 0) , 
(
(((((((((Base_Wage_Regular_Pay_Rate_Actual__c*1.18)+((Housing_Weekly_Per_Diem__c/Weekly_Scheduled_Contracted_Hours__c)+((M_I_Weekly_Per_diem__c/Weekly_Scheduled_Contracted_Hours__c))+((Housing_Package_Weekly_Cost__c/Weekly_Scheduled_Contracted_Hours__c)+(Travel_Per_Diem_Per_contract__c/Contract_Length_Wks__c)/Weekly_Scheduled_Contracted_Hours__c)+((Airfare__c/Contract_Length_Wks__c)/Weekly_Scheduled_Contracted_Hours__c)+((Rental_Car__c/Contract_Length_Wks__c)/Weekly_Scheduled_Contracted_Hours__c))+((Benefits_burden__c/Weekly_Scheduled_Contracted_Hours__c))+(((Completion_Bonus__c*1.18)/Contract_Length_Wks__c)/Weekly_Scheduled_Contracted_Hours__c)))+(((Referral_Bonus__c*1.18)/Contract_Length_Wks__c)/Weekly_Scheduled_Contracted_Hours__c)+
( Misc_1__c /Contract_Length_Wks__c/Weekly_Scheduled_Contracted_Hours__c)+
( Misc_2__c /Contract_Length_Wks__c/Weekly_Scheduled_Contracted_Hours__c)+
( Medical_Fees__c  /Contract_Length_Wks__c/Weekly_Scheduled_Contracted_Hours__c)

)))))))

,

NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Burden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Per_Diem_Per_contract__c</fullName>
        <label>Travel Per Diem Per Contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unbillable_Orientation_Hours__c</fullName>
        <label>Unbillable Orientation Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VMS_MSP_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>VMS/MSP Fee</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weekly_Scheduled_Contracted_Hours__c</fullName>
        <label>Weekly Scheduled Contracted Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Rate Card</label>
    <nameField>
        <displayFormat>RATE-{MMDDYY}-{000}</displayFormat>
        <label>Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Cards</pluralLabel>
    <recordTypes>
        <fullName>Contracted_Rate_Card</fullName>
        <active>true</active>
        <description>This record is to be used to determine the agreed rates between TM and the Client</description>
        <label>Contracted Rate Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Placement_Rate_Card</fullName>
        <active>true</active>
        <description>This record type is for rates established on Placement</description>
        <label>Placement Rate Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Presentation_Card</fullName>
        <active>true</active>
        <description>This record type is for rates to be used in Job Manager Flow</description>
        <label>Presentation Card</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Update_of_RateCard_if_its_Locked</fullName>
        <active>true</active>
        <description>You cannot update the Rate Card when it is locked.</description>
        <errorConditionFormula>AND(NOT(ISNEW()),Locked__c,PRIORVALUE(Locked__c))</errorConditionFormula>
        <errorDisplayField>Locked__c</errorDisplayField>
        <errorMessage>Update of RateCard isn&apos;t allowed as its Locked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>You_must_denote_markup_percentage</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Markup2__c,&apos;Yes&apos;) &amp;&amp; ISBLANK(Markup__c)</errorConditionFormula>
        <errorDisplayField>Markup__c</errorDisplayField>
        <errorMessage>You must have a markup percentage listed if your markup is denoted to Yes</errorMessage>
    </validationRules>
</CustomObject>